# NanoSchedule-agent

./: .gitignore  Dockerfile  README.md  generate_report.py  nginx.conf  pyproject.toml  requirements.txt  serve_pwa.py  setup.py  start.bat  start.ps1  start_keepalive.bat  start_render.sh  ~$设计报告_NanoSchedule.docx  课程设计报告_NanoSchedule.docx
mcp_servers/: calendar_mcp.py  memory_mcp.py
nanobot_calendar/: __init__.py  advisor.py  advisor_tools.py  calendar_tools.py  conversation_indexer.py  coordinator.py  db.py  kb_tools.py  knowledge_base.py  memory_engine.py  memory_tools.py  proactive.py  proactive_tools.py  rag_memory.py  rag_tools.py  reminder_tools.py  stats_api.py
webui/: index.html  manifest.json  sw.js
workspace/: .gitignore  SOUL.md  USER.md  user_profile.json
workspace/cron/: jobs.json
workspace/cron/runs/: 2140bc40_1783158304232_a1368bd4.json  2140bc40_1783160114126_fc7cc5a3.json  2140bc40_1783161923727_2979b758.json
workspace/memory/: .index_cursor  MEMORY.md  history.jsonl
